templates.d/airflow.d/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: APP-airflow
  name: APP-airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP-airflow
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: APP-airflow
    spec:
      containers:
      - image: REGISTRY/APP
        imagePullPolicy: Always
        name: scheduler
        command: ["airflow", "scheduler"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      - image: REGISTRY/APP
        imagePullPolicy: Always
        name: webserver
        command: ["airflow", "webserver"]
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
      - image: REGISTRY/APP
        imagePullPolicy: Always
        name: flower
        command: ["airflow", "celery", "flower"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      - image: REGISTRY/APP
        imagePullPolicy: Always
        name: triggerer
        command: ["airflow", "triggerer"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      imagePullSecrets:
      - name: APP-regcred
status: {}
