templates.d/airflow.d/flower-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: APP-airflow
  name: APP-flower
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: APP-airflow
status:
  loadBalancer: {}
