templates.d/airflow.d/webserver-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: APP-airflow
  name: APP-webserver
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: APP-airflow
status:
  loadBalancer: {}
