templates.d/airflow.d/flower-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: APP-flower
spec:
  rules:
  - host: APP-flower.CLUSTER.k8s.tesla.com
    http:
      paths:
      - backend:
          service:
            name: APP-flower
            port:
              number: 5555
        path: /
        pathType: Exact
status:
  loadBalancer: {}
